# HallOfMemorial

./: .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
docker/dev/: Dockerfile
docker/nginx/: Dockerfile  entry_point.sh  nginx.conf
hall_of_memorial/: asgi.py  settings.py  urls.py  wsgi.py
persons/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
persons/migrations/: 0001_initial.py  0002_alter_person_images.py  0003_remove_imageurl_url_imageurl_image.py
